--- a/Login/index.html
+++ b/Login/index.html
@@ -9,7 +9,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <img src="./assets/logo.jpg" alt="Logo Here" id="logo">
+        <form>
+            <div class="mb-3">
+              <label for="user" class="form-label">User</label>
+              <input type="text" class="form-control" id="user">
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password">
+              </div>
+            <button type="submit" class="btn btn-primary">LOGIN</button>
+          </form>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
