--- a/graphs.html
+++ b/graphs.html
@@ -45,13 +45,13 @@
         </li>
         <li class="nav-header">MENU</li>
         <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="./table.html" class="nav-link">
             <i class="fas fa-circle nav-icon"></i>
             <p>Table</p>
         </a>
         </li>
         <li class="nav-item">
-        <a href="#" class="nav-link active">
+        <a href="./graphs.html" class="nav-link active">
             <i class="fas fa-circle nav-icon"></i>
             <p>Graph</p>
         </a>
@@ -63,7 +63,7 @@
         </a>
         </li>
         <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="./login.html" class="nav-link">
             <i class="fas fa-circle nav-icon"></i>
             <p>Logout</p>
         </a>
