--- a/table.html
+++ b/table.html
@@ -82,10 +82,13 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-12">
-            <div class="breadcrumb float-sm-right">
-              <!-- TODO tanggal hari ini -->
-              2 juli 2021
+            <div class="breadcrumb float-sm-right" id="today-date">
             </div>
+            <script>
+                var today = new Date();
+                var date = today.getDate()+'-'+(today.getMonth()+1)+'-'+today.getFullYear();
+                document.getElementById('today-date').textContent = date;
+            </script>
           </div>
         </div>
       </div><!-- /.container-fluid -->
