set table dataset sesuaikan kerangka di mission

--- a/table.html
+++ b/table.html
@@ -105,52 +105,88 @@
                 <table class="table table-bordered">
                   <thead>
                     <tr>
-                      <th style="width: 10px">#</th>
-                      <th>Task</th>
-                      <th>Progress</th>
-                      <th style="width: 40px">Label</th>
+                      <th class="text-center" style="width: 10px">No</th>
+                      <th class="text-center">On</th>
+                      <th class="text-center">Off</th>
+                      <th class="text-center">Ack by</th>
+                      <th class="text-center">Reason</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>1.</td>
-                      <td>Update software</td>
-                      <td>
-                        <div class="progress progress-xs">
-                          <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-                        </div>
+                      <td class="text-center">1</td>
+                      <td class="text-center">Kamis, 25/02/2021,<br>19:41:50</td>
+                      <td class="text-center">Kamis, 25/02/2021,<br>21:00:50</td>
+                      <td class="text-center">
+                          Act: Audiyatra <br>
+                          Dis: Rizaldy, Gathot
                       </td>
-                      <td><span class="badge bg-danger">55%</span></td>
+                      <td>
+                          1. Interlock Hose Reel Front
+                      </td>
                     </tr>
                     <tr>
-                      <td>2.</td>
-                      <td>Clean database</td>
-                      <td>
-                        <div class="progress progress-xs">
-                          <div class="progress-bar bg-warning" style="width: 70%"></div>
-                        </div>
-                      </td>
-                      <td><span class="badge bg-warning">70%</span></td>
+                        <td class="text-center">2</td>
+                        <td class="text-center">Minggu, 01/03/2021,<br>22:41:50</td>
+                        <td class="text-center">Minggu, 01/03/2021,<br>22:41:50</td>
+                        <td class="text-center"></td>
+                        <td>
+                            2. Interlock Hose Reel Rear
+                        </td>
                     </tr>
                     <tr>
-                      <td>3.</td>
-                      <td>Cron job running</td>
-                      <td>
-                        <div class="progress progress-xs progress-striped active">
-                          <div class="progress-bar bg-primary" style="width: 30%"></div>
-                        </div>
-                      </td>
-                      <td><span class="badge bg-primary">30%</span></td>
+                        <td class="text-center">3</td>
+                        <td class="text-center">Minggu, 01/03/2021,<br>23:30:00</td>
+                        <td class="text-center">Minggu, 01/03/2021,<br>00:30:00</td>
+                        <td class="text-center"></td>
+                        <td>
+                            3. Interlock Input Coupler Stow
+                        </td>
                     </tr>
                     <tr>
-                      <td>4.</td>
-                      <td>Fix and squish bugs</td>
-                      <td>
-                        <div class="progress progress-xs progress-striped active">
-                          <div class="progress-bar bg-success" style="width: 90%"></div>
-                        </div>
-                      </td>
-                      <td><span class="badge bg-success">90%</span></td>
+                        <td class="text-center">4</td>
+                        <td class="text-center">Selasas, 03/03/2021,<br>08:30:30</td>
+                        <td class="text-center">Selasas, 03/03/2021,<br>09:30:30</td>
+                        <td class="text-center"></td>
+                        <td>
+                            4. Interlock Input Hose Boom Stow
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">5</td>
+                        <td class="text-center">Kamis, 05/03/2021,<br>08:30:30</td>
+                        <td class="text-center">Kamis, 05/03/2021,<br>10:30:30</td>
+                        <td class="text-center"></td>
+                        <td>
+                            9. Interlock Bonding Static Reel Front
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">6</td>
+                        <td class="text-center">Jumat, 06/03/2021,<br>08:30:30</td>
+                        <td class="text-center">Jumat, 06/03/2021,<br>08:45:30</td>
+                        <td class="text-center"></td>
+                        <td>
+                            10. Interlock Bonding Static Reel Rear
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">7</td>
+                        <td class="text-center">Senin, 08/03/2021,<br>08:30:30</td>
+                        <td class="text-center">Senin, 08/03/2021,<br>08:30:30</td>
+                        <td class="text-center"></td>
+                        <td>
+                            15. Interlock System Fault
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">8</td>
+                        <td class="text-center">Selasa, 16/03/2021,<br>08:30:30</td>
+                        <td class="text-center">Selasa, 16/03/2021,<br>08:30:30</td>
+                        <td class="text-center"></td>
+                        <td>
+                            16. Breakdown
+                        </td>
                     </tr>
                   </tbody>
                 </table>
