--- a/graphs.html
+++ b/graphs.html
@@ -98,12 +98,12 @@
     <section class="content">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12">
+          <div class="col-6 col-md-12 col-xs-12">
             <!-- BAR CHART -->
             <div class="card">
                 <div class="card-body">
                   <div class="chart">
-                    <canvas id="barChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    <canvas id="barChart" style="min-height: 250px; height: 700px; max-height: 250px; max-width: 100%;"></canvas>
                   </div>
                 </div>
                 <!-- /.card-body -->
@@ -147,47 +147,51 @@
     //- BAR CHART -
     //-------------
     var areaChartData = {
-      labels  : ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+      labels  : [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16],
       datasets: [
         {
-          label               : 'Digital Goods',
-          backgroundColor     : 'rgba(60,141,188,0.9)',
-          borderColor         : 'rgba(60,141,188,0.8)',
-          pointRadius          : false,
-          pointColor          : '#3b8bba',
-          pointStrokeColor    : 'rgba(60,141,188,1)',
-          pointHighlightFill  : '#fff',
-          pointHighlightStroke: 'rgba(60,141,188,1)',
-          data                : [28, 48, 40, 19, 86, 27, 90]
-        },
-        {
-          label               : 'Electronics',
-          backgroundColor     : 'rgba(210, 214, 222, 1)',
-          borderColor         : 'rgba(210, 214, 222, 1)',
+          backgroundColor     : '#4572c7',
+          borderColor         : '#4572c7',
           pointRadius         : false,
-          pointColor          : 'rgba(210, 214, 222, 1)',
+          pointColor          : '#4572c7',
           pointStrokeColor    : '#c1c7d1',
           pointHighlightFill  : '#fff',
           pointHighlightStroke: 'rgba(220,220,220,1)',
-          data                : [65, 59, 80, 81, 56, 55, 40]
+          hoverBorderWidth         : 100,
+          data                : [2,3,4,1,2,5,6,7,1,1,1,2,3,2,1,9]
         },
       ]
     }
     var barChartCanvas = $('#barChart').get(0).getContext('2d')
     var barChartData = $.extend(true, {}, areaChartData)
-    var temp0 = areaChartData.datasets[0]
-    var temp1 = areaChartData.datasets[1]
-    barChartData.datasets[0] = temp1
-    barChartData.datasets[1] = temp0
+    barChartData.datasets[0] = areaChartData.datasets[0]
 
     var barChartOptions = {
       responsive              : true,
       maintainAspectRatio     : false,
-      datasetFill             : false,
+      datasetFill             : true,
       title: {
         display: true,
-        text: 'chart',
-      }
+        text: 'Trend of Reason',
+      },
+      scales: {
+                    yAxes: [{
+                            display: true,
+                            ticks: {
+                                beginAtZero: true,
+                                steps: 10,
+                                stepValue: 1,
+                                max: 10,
+                                min: 0,
+                            }
+                        }]
+                },
+        legend: {
+            display: false,
+            labels: {
+                display: false
+            }
+        }
     }
 
     new Chart(barChartCanvas, {
