--- a/table.html
+++ b/table.html
@@ -98,7 +98,7 @@
     <section class="content">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12">
+          <div class="col-md-10 col-xs-12">
             <div class="card">
               <!-- /.card-header -->
               <div class="card-body">
