change login link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <h4 class="motto">It's time to build your website!</h4>
             <div class="subscribe">
                 <h5 class="info-text">
-                    Not sure where to start? Check the <a href="login.html" target="_blank">Login</a><br>
+                    Not sure where to start? Check the <a href="login.php" target="_blank">Login</a><br>
                     Check the DB Example in <a href="view_db_example.php" target="_blank">DB Example</a>
                 </h5>
             </div>
