add default login creds

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <div class="subscribe">
                 <h5 class="info-text">
                     Not sure where to start? Check the <a href="login.php" target="_blank">Login</a><br>
+                    Default login: <code>testAkun:secret123</code><br><br>
                     Check the DB Example in <a href="view_db_example.php" target="_blank">DB Example</a>
                 </h5>
             </div>
